2007-01-26  dima  <dima.exe@gmail.com>

	* rails-navigation.el (rails-nav:create-goto-menu): now support
	nested lists in append-to-menu (ex. (list (cons) (cons)))
	(rails-nav:create-new-layout): cleanup
	(rails-nav:goto-layouts): cleanup

	* rails-core.el
	(rails-core:plugins): fix invalid path passed into directory-files
	(rails-core:layouts): new function

	* rails-for-view.el (rails-for-view): remove detect mmm-mode, always apply hotkeys to mmm-mode-map (if exist)

	* rails.el: apply ruby-mode to *.rake files and setup utf9 encoding

	* rails-lib.el (list->alist): skip if LIST entry is list	

2007-01-25  dima  <dima.exe@gmail.com>
  * rails-navigation.el, rails-ui.el: add rails-nav:goto-plugins
  * rails-ruby.el: remove advice for ruby-indent-command
  * rails-lib.el (def-snips): fix indentation
  * rails-core.el: 
	fix list ordered in rails-core:*
	add rails-core:observer-p
  * rails.el (rails-open-log): fix path to log file
  * rails.el: cleanup initialization code

2007-01-24  dima  <dima.exe@gmail.com>
  * rails-ui.el: create key bindings and menu items to latest changes
  * rails-scripts.el: 
	add more targets to generate and destroy
	cleanup targets
	create variables: rails-generate-params-list, rails-destroy-params-list
  * rails-navigation.el: 
	create another implementation menu: rails-nav:goto-file-with-menu-from-list,
	rewrite rails:nav:goto-* to use this
  * rails-core.el: 
	rewrite rails-core:(controllers,models,etc),
	add more functions to lookup plugins, migrations, etc

2007-01-23  dima  <dima.exe@gmail.com>
  * rails-scripts.el (rails-rake-tests): store selected value, set it to default
  * rails-webrick.el (rails-webrick:start): fix #8088 (Akira Ikeda)
  * rails-core.el: add rails-core to eval-when-compile
  * rails-ui.el (rails-minor-mode-map): 
	rebind some hotkeys
	fix snippents (bad indent after end ruby keyword)
  * rails-scripts.el: complete rewrite all script functions to using autocomplete